<resources>
    <string name="app_name">NUMAD22Sp_AzimTamboli</string>
    <string name="button_string">About me</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">f</string>
    <string name="button">newPage</string>
    <string name="e">E</string>
    <string name="submit">Submit</string>
    <string name="url_info">Url Info</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="link_collector">Link Collector</string>
    <string name="email">email</string>
    <string name="locator">Locator</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="dash">-</string>
    <string name="web_service">Web Service</string>
</resources>