<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="298dp"
        android:layout_height="139dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:paddingStart="105dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/textView"
                android:layout_width="37dp"
                android:layout_height="match_parent"
                android:text="Hello World!" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_string"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/nextPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:layout_marginEnd="10dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/locator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locator"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/link_collector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/link_collector" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>