<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout2"

        android:layout_width="357dp"
        android:layout_height="261dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="0dp"
            android:text="@string/url_info"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/url_d"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_d"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/url"
            android:inputType="text" />

        <EditText
            android:id="@+id/name_d"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <Button
            android:id="@+id/submit"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/url_d"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>